# ai-agile-dev

./: .gitignore  Dockerfile  GEMINI.md  README.md  docker-compose.yml  makefile  pyproject.toml  requirements.txt
src/: agent.py  cli.py  config.py  genai.py  main.py  storage.py  ui.py
