[project]
name = "ai-agile-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-ollama>=0.3.7",
    "langgraph>=0.6.6",
    "streamlit>=1.49.0",
    "tinydb>=4.8.2",
    "typer>=0.16.1",
]
